--- a/design/app/styles/config.scss
+++ b/design/app/styles/config.scss
@@ -36,6 +36,7 @@ $colorBlue: #227ab2;
 $colorSuccess: #41b222;
 $colorInfo: #227ab2;
 $colorPrimaryHighlight: #3a4856;
+$colorBgDropdown: #E9E9E9;
 
 // Generic
 $spacing: 40px;
