--- a/design/app/styles/components/button.scss
+++ b/design/app/styles/components/button.scss
@@ -1,91 +1,79 @@
-.button, input[type="submit"] {
-	border-radius: 4px;
-	border: 2px solid $colorPrimary;
-	background-color: $colorPrimary;
-	color: #fff;
-	display: inline-block;
-	text-decoration: none;
-	padding: 9px 15px;
-	font-size: 16px;
-	font-weight: bold;
-	cursor: pointer;
-
-	&.white, &.white-alt {
-		background-color: #fff;
-		color: $colorPrimary;
-		border-color: #fff;
-
-		&:hover {
-			background-color: $colorAccent;
-			border-color: $colorAccent;
-			color: #fff;
-		}
-	}
-
-	&.white-alt:hover {
-		background-color: $colorPrimary;
-		border-color: $colorPrimary;
-	}
-
-	&.accent {
-		background-color: $colorAccent;
-		border-color: $colorAccent;
-	}
-
-	&.info {
-		background-color: $colorInfo;
-		border-color: $colorInfo;
-
-		&:hover {
-			background-color: $colorPrimary;
-			border-color: $colorPrimary;
-		}
-	}
-
-	.icon-right {
-		float: right;
-		margin-left: 10px;
-		margin-top: 3px;
-	}
-
-	&.block {
-		display: block;
-		text-align: center;
-		width: 100%;
-	}
-
-	&.medium {
-		padding: 11px 20px;
-		font-size: 18px;
-	}
-
-	&.primary-highlight {
-		background-color: $colorPrimaryHighlight;
-		border-color: $colorPrimaryHighlight;
-	}
-}
-
-.btn {
-    padding: 14px 24px;
-    border-radius: 5px;
+.button,
+input[type="submit"] {
+  border-radius: 4px;
+  border: 2px solid $colorPrimary;
+  background-color: $colorPrimary;
+  color: #fff;
+  display: inline-block;
+  text-decoration: none;
+  padding: 9px 15px;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  &.white,
+  &.white-alt {
+    background-color: #fff;
+    color: $colorPrimary;
+    border-color: #fff;
+    &:hover {
+      background-color: $colorAccent;
+      border-color: $colorAccent;
+      color: #fff;
+    }
+  }
+  &.white-alt:hover {
+    background-color: $colorPrimary;
+    border-color: $colorPrimary;
+  }
+  &.accent {
+    background-color: $colorAccent;
+    border-color: $colorAccent;
+  }
+  &.info {
+    background-color: $colorInfo;
+    border-color: $colorInfo;
+    &:hover {
+      background-color: $colorPrimary;
+      border-color: $colorPrimary;
+    }
+  }
+  .icon-right {
     float: right;
-    border: none;
-    margin: 30px 5% 20px 0;
-    text-transform: uppercase;
-	text-decoration: none;
+    margin-left: 10px;
+    margin-top: 3px;
+  }
+  &.block {
+    display: block;
+    text-align: center;
+    width: 100%;
+  }
+  &.medium {
+    padding: 11px 20px;
+    font-size: 18px;
+  }
+  &.primary-highlight {
+    background-color: $colorPrimaryHighlight;
+    border-color: $colorPrimaryHighlight;
+  }
 }
-
+.btn {
+  padding: 14px 24px;
+  border-radius: 5px;
+  float: right;
+  border: none;
+  margin: 30px 0 20px;
+  text-transform: uppercase;
+  text-decoration: none;
+}
 .btn-square {
-    padding: 10px;
-    width: 30px;
-    height: 100%;
+  padding: 10px;
+  width: 30px;
+  height: 100%;
 }
-
 .orange {
-    background-color: $colorButtonNext;
-    color: $colorWhite;
+  background-color: $colorButtonNext;
+  color: $colorWhite;
 }
-
 .orange:hover {
-    background-color: $colorButtonNextHover;
+  background-color: $colorButtonNextHover;
 }
