Work on the react components and setup

--- a/design/app/styles/components/header.scss
+++ b/design/app/styles/components/header.scss
@@ -13,6 +13,7 @@ header {
     height: 100px;
     width: 100%;
     position: absolute;
+    top: 0;
     nav {
       position: relative;
       padding: $spacing / 1.5;
