--- a/frontend/src/components/App/App.css
+++ b/frontend/src/components/App/App.css
@@ -1,4 +1,6 @@
 @import '../../../node_modules/normalize.css/normalize.css';
+@import '../../../node_modules/bootstrap/dist/css/bootstrap.css';
+@import '../../../node_modules/bootstrap/dist/css/bootstrap-theme.css';
 
 /*! React Starter Kit | MIT License | http://www.reactstarterkit.com/ */
 
