--- a/frontend/src/components/Button/Button.css
+++ b/frontend/src/components/Button/Button.css
@@ -1,45 +1,23 @@
-@import '../variables.css';
-
 .Button {
+  border-radius: 4px;
+  border: 2px solid #233141;
+  background-color: #233141;
+  color: #fff;
   display: inline-block;
-}
-
-.Button input, input[type="submit"], .Button a {
-    border-radius: 4px;
-    border: 2px solid #233141;
-    background-color: #233141;
-    color: #fff;
-    display: inline-block;
-    text-decoration: none;
-    padding: 6px 10px;
-    font-size: 16px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.Button input, .Button a {
-  width: auto;
-  background-color: #f15843;
-  border-color: #f15843;
+  text-decoration: none;
+  padding: 9px 15px;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
   margin: 0 10px;
 }
 
-.Button .big {
-    padding: 12px 20px;
+.Button-Color-Orange {
+
 }
 
-.Button .accent {
-  background-color: var(--color-accent);
-}
-
-.Button .white {
-  background-color: var(--color-white);
-  color: var(--color-text);
-  border: none;
-}
-
-.button .white:hover {
-  background-color: var(--color-accent);
-  color: var(--color-white);
-  border: none;
+.Button-Color-White {
+  background-color: #fff;
+  color: #233141;
+  border-color: #fff;
 }
