--- a/frontend/src/components/ContentPage/ContentPage.css
+++ b/frontend/src/components/ContentPage/ContentPage.css
@@ -2,6 +2,9 @@
 
 @import '../variables.css';
 
+.ContentPage {
+  display: flex;
+}
 .ContentPage-container {
   margin: 0 auto;
   padding: 0 0 40px;
