--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -3,42 +3,42 @@
 @import '../variables.css';
 
 .Footer {
-  background: #333;
-  color: #fff;
+  background: var(--color-footer);
+  color: var(--color-white);
+}
+
+.Footer-copyright {
+  text-align: center;
+  height: 60px;
+  line-height: 60px;
+  font-size: 12px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  font-weight: bold;
+  background-color: var(--color-primary-shade-darker-4);
 }
 
 .Footer-container {
-  margin: 0 auto;
   padding: 20px 15px;
-  max-width: var(--max-content-width);
-  text-align: center;
+  color: var(--color-white);
+  background-color: var(--color-primary-shade-darker-3);
 }
 
-.Footer-text {
-  color: rgba(255, 255, 255, .5);
+.Footer-container a {
+  color: var(--color-white);
 }
 
-.Footer-text--muted {
-  color: rgba(255, 255, 255, .3);
+.Footer-container ul {
+  padding: 0;
 }
 
-.Footer-spacer {
-  color: rgba(255, 255, 255, .3);
+.Footer-container li {
+  list-style: none;
+  text-align: left;
 }
 
-.Footer-text,
-.Footer-link {
-  padding: 2px 5px;
-  font-size: 1em;
-}
-
-.Footer-link,
-.Footer-link:active,
-.Footer-link:visited {
-  color: rgba(255, 255, 255, .6);
-  text-decoration: none;
-}
-
-.Footer-link:hover {
-  color: rgba(255, 255, 255, 1);
+.Footer-container h2 {
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: bold;
 }
