--- a/frontend/src/components/HeaderSmall/HeaderSmall.css
+++ b/frontend/src/components/HeaderSmall/HeaderSmall.css
@@ -1,52 +1,16 @@
-/* React Starter Kit | MIT License | http://www.reactstarterkit.com/ */
-
 @import '../variables.css';
 
-:root {
-  --brand-color: #61dafb;
-}
-
-.Header {
+.HeaderSmall {
   background: var(--color-primary);
   color: #fff;
 }
 
-.Header-container {
+.HeaderSmall-container {
   margin: 0 auto;
-  padding: 20px 0;
+  padding: 20px 20px;
   max-width: var(--max-content-width);
 }
 
-.Header-brand {
-  color: color(var(--brand-color) lightness(+10%));
-  text-decoration: none;
-  font-size: 1.75em; /* ~28px */
-}
-
-.Header-brandTxt {
-  margin-left: 10px;
-}
-
-.Header-nav {
+.HeaderSmall-nav {
   float: right;
-  margin-top: 6px;
-}
-
-.Header-banner {
-  text-align: center;
-}
-
-.Header-bannerTitle {
-  margin: 0;
-  padding: 10px;
-  font-weight: normal;
-  font-size: 4em;
-  line-height: 1em;
-}
-
-.Header-bannerDesc {
-  padding: 0;
-  color: rgba(255, 255, 255, .5);
-  font-size: 1.25em;
-  margin: 0;
 }
