--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,21 +1,22 @@
-/* React Starter Kit | MIT License | http://www.reactstarterkit.com/ */
+@import '../variables.css';
 
 .Navigation-link {
   display: inline-block;
   padding: 3px 8px;
   text-decoration: none;
-  font-size: 1.125em; /* ~18px */
+  font-size: 16px;
   font-weight: bold;
+  letter-spacing: 1px;
 }
 
 .Navigation-link,
 .Navigation-link:active,
 .Navigation-link:visited {
-  color: rgba(255, 255, 255, 0.9);
+  color: var(--color-white);
 }
 
 .Navigation-link:hover {
-  color: rgba(255, 255, 255, 0.6);
+  color: rgba(255, 255, 255, 1);
 }
 
 .Navigation-link--highlight {
