--- a/frontend/src/components/App/App.css
+++ b/frontend/src/components/App/App.css
@@ -8,6 +8,59 @@
 @import '../variables.css';
 
 /*
+ * Extra style for the content
+ * ========================================================================== */
+#app .app-container > div {
+  display: flex;
+}
+
+#app {
+  background-color: var(--color-white-shade-darker-1);
+}
+
+.App-Page {
+  width: 100%;
+}
+
+.App-Page-Container {
+  padding: 40px;
+}
+
+.App-Page-Content {
+  background-color: var(--color-white);
+  width: 100%;
+  position: relative;
+}
+
+.App-Page-Content > section > h1 {
+  font-size: 20px;
+  padding: 20px 0 15px 10px;
+  border-bottom: 1px solid var(--color-white-shade-darker-1);
+  margin: 0px 10px 5px 10px;
+}
+
+.App-Page-Title {
+  width: 100%;
+  background-color: var(--color-primary-shade-lighter-1);
+  color: var(--color-text);
+  padding-left: 15px;
+  height: 49px;
+}
+
+.App-Page-Title h1 {
+  height: 49px;
+  margin: 0;
+  font-size: 18px;
+  line-height: 49px;
+  text-transform: uppercase;
+}
+
+/*
+ * General Styles
+ * ========================================================================== */
+
+
+/*
  * Base styles
  * ========================================================================== */
 
