--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -19,13 +19,13 @@
 }
 
 .Footer-container {
-  padding: 20px 15px;
+  padding: 3em 4em;
   color: var(--color-white);
   background-color: var(--color-primary-shade-darker-3);
 }
 
 .Footer-container a {
-  color: var(--color-white);
+  color: var(--color-white-shade-darker-1);
 }
 
 .Footer-container ul {
@@ -37,8 +37,58 @@
   text-align: left;
 }
 
+.Footer-container li a {
+  color: var(--color-white-shade-darker-1);
+  font-size: 16px;
+  padding: 2px 0;
+  display: block;
+}
+
 .Footer-container h2 {
   font-size: 14px;
   text-transform: uppercase;
   font-weight: bold;
+  letter-spacing: 1px;
+}
+
+.Footer-Company {
+  padding-left: 60px;
+  padding-top: 15px;
+}
+
+.Footer-Logo {
+  font-size: 24px;
+  margin: 0 ;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: var(--color-white) !important;
+}
+
+.Footer-SocialLinks {
+  margin-top: 15px;
+}
+
+.Footer-SocialLinks a {
+  margin-right: 20px;
+  width: 38px;
+  height: 38px;
+  font-size: 18px;
+}
+
+.Footer-SocialLinks i:hover {
+  background-color: var(--color-white);
+  color: var(--color-black);
+}
+
+.Footer-SocialLinks i {
+  text-align: center;
+  width: 38px; height: 38px;
+  color: var(--color-white);
+  border: 1px solid var(--color-white);
+  border-radius: 50%;
+  line-height: 38px;
+}
+
+.Footer-SocialLinks a:last {
+  margin-right: 0;
 }
