--- a/frontend/src/components/variables.css
+++ b/frontend/src/components/variables.css
@@ -24,8 +24,10 @@
   --color-primary-shade-lighter-4: #56789f;
 
   --color-sidemenu: #d3d6d9;
+  --color-text: #d3d6d9;
   --color-footer: #101010;
 
+  --color-white-shade-darker-1: #ddd;
   --color-white: #FFFFFF;
   --color-black: #000000;
   --color-black-shade-lighter-1: #0A0A0A;
