--- a/frontend/src/components/variables.css
+++ b/frontend/src/components/variables.css
@@ -27,6 +27,7 @@
   --color-text: #d3d6d9;
   --color-footer: #101010;
 
+  --color-white-shade-darker-2: #bbb;
   --color-white-shade-darker-1: #ddd;
   --color-white: #FFFFFF;
   --color-black: #000000;
