--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -15,13 +15,13 @@
   letter-spacing: 1px;
   text-transform: uppercase;
   font-weight: bold;
-  background-color: var(--color-primary-shade-darker-4);
+  background-color: var(--color-primary-shade-darker-1);
 }
 
 .Footer-container {
   padding: 3em 4em;
   color: var(--color-white);
-  background-color: var(--color-primary-shade-darker-3);
+  background-color: var(--color-primary);
 }
 
 .Footer-container a {
