--- a/frontend/src/components/variables.css
+++ b/frontend/src/components/variables.css
@@ -27,8 +27,8 @@
   --color-text: #d3d6d9;
   --color-footer: #101010;
 
-  --color-white-shade-darker-2: #bbb;
-  --color-white-shade-darker-1: #ddd;
+  --color-white-shade-darker-2: #d6d6d6;
+  --color-white-shade-darker-1: #EBEBEB;
   --color-white: #FFFFFF;
   --color-black: #000000;
   --color-black-shade-lighter-1: #0A0A0A;
