--- a/frontend/src/components/App/App.css
+++ b/frontend/src/components/App/App.css
@@ -42,6 +42,8 @@
   width: 100%;
   position: relative;
   padding: 5px 20px;
+  border-radius: 5px;
+  border: 1px solid var(--color-white-shade-darker-2);
 }
 
 .App-Page-Content > section > h1 {
@@ -57,7 +59,7 @@
   color: var(--color-black);
   padding-left: 15px;
   height: 49px;
-  border-bottom: 1px solid var(--color-white-shade-darker-1);
+  border-bottom: 1px solid var(--color-white-shade-darker-2);
 }
 
 .App-Page-Title h1 {
