Design in react components

--- a/frontend/src/components/variables.css
+++ b/frontend/src/components/variables.css
@@ -26,6 +26,7 @@
   --color-sidemenu: #d3d6d9;
   --color-text: #d3d6d9;
   --color-footer: #101010;
+  --color-success: #41b222;
 
   --color-white-shade-darker-2: #d6d6d6;
   --color-white-shade-darker-1: #EBEBEB;
