--- a/frontend/src/components/App/App.css
+++ b/frontend/src/components/App/App.css
@@ -10,9 +10,13 @@
 /*
  * Extra style for the content
  * ========================================================================== */
-#app .app-container > div {
+.App-Container {
   height: 100%;
   display: flex;
+}
+
+.App-Content {
+  width: 100%;
 }
 
 #app {
@@ -46,7 +50,7 @@
   border: 1px solid var(--color-white-shade-darker-2);
 }
 
-.App-Page-Content > section > h1 {
+.App-Page-Content section > h1 {
   font-size: 24px;
   padding: 20px 0 15px 0;
   margin: 0 0 10px 0;
