--- a/frontend/src/js/components/BuilderStep2Page/BuilderStep2Page.css
+++ b/frontend/src/js/components/BuilderStep2Page/BuilderStep2Page.css
@@ -22,7 +22,7 @@
 }
 
 .BuilderPage-PickImageBlock-Selected select {
-  background: url("./option-dropdown-success.png") no-repeat right #FFF !important;
+  background: url("../../images/option-dropdown-success.webp") no-repeat right #FFF !important;
   color: var(--color-success) !important;
 }
 
@@ -42,7 +42,7 @@
 .BuilderPage-PickImageBlock select {
    margin: 0;
    width: 90%;
-   background: url("./option-dropdown.png") no-repeat right #FFF;
+   background: url("../../images/option-dropdown.webp") no-repeat right #FFF;
    color: var(--color-black);
    border: 0;
    border-radius: 0;
