--- a/frontend/src/js/components/BuilderStep1Page/BuilderStep1Page.css
+++ b/frontend/src/js/components/BuilderStep1Page/BuilderStep1Page.css
@@ -92,3 +92,14 @@
   line-height: 0.1em;
   margin: 20px 0;
 }
+
+.BuilderPage-HelpIcon {
+  font-size: 13px;
+  position: absolute;
+  margin-left: 5px;
+  font-weight: bold;
+}
+
+.BuilderPage-HelpIcon:hover {
+  cursor: pointer;
+}
