--- a/frontend/src/js/components/variables.css
+++ b/frontend/src/js/components/variables.css
@@ -26,6 +26,9 @@
   --color-footer: #101010;
   --color-success: #41b222;
 
+  --color-white-shade-darker-5: #999999;
+  --color-white-shade-darker-4: #ADADAD;
+  --color-white-shade-darker-3: #C2C2C2;
   --color-white-shade-darker-2: #d6d6d6;
   --color-white-shade-darker-1: #EBEBEB;
   --color-white: #FFFFFF;
