--- a/frontend/src/js/components/MainLayout/MainLayout.css
+++ b/frontend/src/js/components/MainLayout/MainLayout.css
@@ -1,10 +1,16 @@
+.MainLayout {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
 .MainLayout-Content {
+  flex: 1;
   padding: 40px;
   margin: 0 auto;
 
   display:flex;
-  justify-content:
-  center;
-  align-items:center;
+  justify-content: center;
   width:100%;
+  height: 100%;
 }
