--- a/frontend/src/js/components/layouts/DashboardLayout/DashboardLayout.css
+++ b/frontend/src/js/components/layouts/DashboardLayout/DashboardLayout.css
@@ -25,7 +25,7 @@
   border: 1px solid var(--color-white-shade-darker-2);
 }
 
-.DashboardLayout-Page-Content section > h1 {
+.DashboardLayout-Page-Content > div > h1 {
   font-size: 24px;
   padding: 20px 0 15px 0;
   margin: 0 0 10px 0;
