--- a/frontend/src/js/components/elements/DistributionPicker/DistributionPicker.css
+++ b/frontend/src/js/components/elements/DistributionPicker/DistributionPicker.css
@@ -3,6 +3,10 @@
   flex-wrap: wrap;
 }
 
+.DistributionPicker-PickDistribution:hover {
+    cursor: pointer;
+}
+
 .DistributionPicker-PickDistribution {
   background-color: #FFFFFF;
   border: 1px solid #cccccc;
@@ -27,4 +31,9 @@
    margin: 0 auto;
    padding: 10px 0 10px 0;
    display: block;
+}
+
+.DistributionPicker-PickDistribution-Selected {
+    border: 1px solid var(--color-success);
+    color: var(--color-success);
 }
