Validator, add error messages

--- a/frontend/src/js/components/elements/Input/Input.css
+++ b/frontend/src/js/components/elements/Input/Input.css
@@ -12,7 +12,12 @@
 
 .validation-error {
   border: 1px solid red;
-  color:red;
+  color: red;
+}
+
+.validation-errors > li{
+    font-style: italic;
+    color: red;
 }
 
 .Input-Inline {
