Finished rendering everything, now the cleanup and clarifications

--- a/frontend/src/js/components/elements/DockerfileViewer/DockerfileViewer.css
+++ b/frontend/src/js/components/elements/DockerfileViewer/DockerfileViewer.css
@@ -1,4 +1,4 @@
-.DockerfileViewer {
+.DockerfileViewer-Dockerfile {
     background-color: var(--color-terminal);
     min-height: 100px;
     border-radius: 3px;
@@ -7,10 +7,27 @@
     text-shadow: 0 0 1px var(--color-terminal-text-shadow);
 }
 
-.DockerfileViewer > div {
+.DockerfileViewer-Dockerfile > div {
     margin-bottom: 10px;
 }
 
-.DockerfileViewer > div:last-child {
+.DockerfileViewer-Dockerfile > div:last-child {
+    margin-bottom: 0px;
+}
+
+.DockerfileViewer-StartupParams {
+    background-color: var(--color-terminal);
+    min-height: 100px;
+    border-radius: 3px;
+    padding: 10px 15px;
+    color: var(--color-terminal-text);
+    text-shadow: 0 0 1px var(--color-terminal-text-shadow);
+}
+
+.DockerfileViewer-StartupParams > div {
+    margin-bottom: 10px;
+}
+
+.DockerfileViewer-StartupParams > div:last-child {
     margin-bottom: 0px;
 }
