--- a/frontend/src/js/components/elements/DockerfileViewer/DockerfileViewer.css
+++ b/frontend/src/js/components/elements/DockerfileViewer/DockerfileViewer.css
@@ -31,3 +31,20 @@
 .DockerfileViewer-StartupParams > div:last-child {
     margin-bottom: 0px;
 }
+
+.DockerfileViewer-StartupScript {
+    background-color: var(--color-terminal);
+    min-height: 100px;
+    border-radius: 3px;
+    padding: 10px 15px;
+    color: var(--color-terminal-text);
+    text-shadow: 0 0 1px var(--color-terminal-text-shadow);
+}
+
+.DockerfileViewer-StartupScript > div {
+    margin-bottom: 10px;
+}
+
+.DockerfileViewer-StartupScript > div:last-child {
+    margin-bottom: 0px;
+}
