--- a/frontend/src/js/components/variables.css
+++ b/frontend/src/js/components/variables.css
@@ -29,8 +29,8 @@
   --color-white-shade-darker-5: #999999;
   --color-white-shade-darker-4: #ADADAD;
   --color-white-shade-darker-3: #C2C2C2;
-  --color-white-shade-darker-2: #d6d6d6;
-  --color-white-shade-darker-1: #EBEBEB;
+  --color-white-shade-darker-2: #dee5e7;
+  --color-white-shade-darker-1: #edf1f2;
   --color-white: #FFFFFF;
   --color-black: #000000;
   --color-black-shade-lighter-1: #0A0A0A;
