Design tweaks for step2 of the builder #17

--- a/frontend/src/js/components/elements/Button/Button.css
+++ b/frontend/src/js/components/elements/Button/Button.css
@@ -44,3 +44,11 @@
 .Button-DragIcon {
     cursor: move;
 }
+
+.Button-Align-Right {
+    float: right;
+}
+
+.Button-Align-Left {
+    float: left;
+}
