--- a/frontend/src/js/components/variables.css
+++ b/frontend/src/js/components/variables.css
@@ -22,15 +22,15 @@
   --color-primary-shade-lighter-4: #56789f;
 
   --color-sidemenu: #d3d6d9;
-  --color-text: #d3d6d9;
+  --color-text: #6a6c6f;
   --color-footer: #101010;
   --color-success: #41b222;
 
   --color-white-shade-darker-5: #999999;
   --color-white-shade-darker-4: #ADADAD;
   --color-white-shade-darker-3: #C2C2C2;
-  --color-white-shade-darker-2: #dee5e7;
-  --color-white-shade-darker-1: #edf1f2;
+  --color-white-shade-darker-2: #dddddd;
+  --color-white-shade-darker-1: #fafafa;
   --color-white: #FFFFFF;
   --color-black: #000000;
   --color-black-shade-lighter-1: #0A0A0A;
