--- a/frontend/src/js/components/App/App.css
+++ b/frontend/src/js/components/App/App.css
@@ -1,5 +1,7 @@
 @import '../../../../node_modules/normalize.css/normalize.css';
 @import '../../../../node_modules/font-awesome/css/font-awesome.min.css';
+@import '../../../../node_modules/bootstrap/dist/css/bootstrap.min.css';
+@import '../../../../node_modules/bootstrap/dist/css/bootstrap-theme.min.css';
 @import '../variables.css';
 
 /*
@@ -20,7 +22,7 @@
  * Base styles
  * ========================================================================== */
 html {
-  color: #222;
+  color: var(--color-text);
   font-weight: 100;
   font-size: 1em; /* ~16px; */
   font-family: var(--font-family-base);
