--- a/frontend/src/js/components/layouts/DashboardLayout/DashboardLayout.css
+++ b/frontend/src/js/components/layouts/DashboardLayout/DashboardLayout.css
@@ -7,6 +7,7 @@
 
 .DashboardLayout-Content {
   width: 100%;
+  height: 100%;
 }
 
 .DashboardLayout-Page {
@@ -14,16 +15,19 @@
 }
 
 .DashboardLayout-Page-Container {
-  padding: 40px 50px;
+  padding: 20px 30px;
   background-color: var(--color-white-shade-darker-1);
+  margin-top: 70px;
+  overflow-y: scroll;
+  position: relative;
+  height: calc(100% - 70px);
 }
 
 .DashboardLayout-Page-Content {
   background-color: var(--color-white);
-  position: relative;
   padding: 15px 20px;
-  border-radius: 2px;
-  border: 1px solid var(--color-white-shade-darker-2);
+  border-radius: 0;
+  border: 1px solid rgba(0, 0, 0, 0.07);
 }
 
 .DashboardLayout-Page-Content > div > h1 {
@@ -33,18 +37,40 @@
   text-align: center;
 }
 
-.DashboardLayout-Page-Title {
+.DashboardLayout-Page-Header {
   background-color: var(--color-white);
   color: var(--color-black);
-  padding-left: 15px;
-  height: 49px;
+  height: 69px;
   border-bottom: 1px solid var(--color-white-shade-darker-2);
+  position: fixed;
+  width: 100%;
+  z-index: 2;
 }
 
-.DashboardLayout-Page-Title h1 {
-  height: 49px;
-  margin: 0;
-  font-size: 18px;
-  line-height: 49px;
-  text-transform: uppercase;
+.DashboardLayout-Page-Header ul {
+    height: 100%;
+    padding: 0 0 0 20px;
+    margin: 0;
+}
+
+.DashboardLayout-Page-Header ul li {
+    height: 100%;
+    list-style: none;
+    display: inline-block;
+    margin-right: 40px;
+}
+
+.DashboardLayout-Page-Header ul li a {
+    height: 100%;
+    display: block;
+    line-height: 68px;
+    color: var(--color-text);
+    font-size: 14px;
+}
+
+.DashboardLayour-Page-Title {
+    font-size: 30px;
+    font-weight: 700;
+    padding: 20px 0;
+    letter-spacing: 1.2px;
 }
