--- a/frontend/src/js/components/elements/Input/Input.css
+++ b/frontend/src/js/components/elements/Input/Input.css
@@ -2,14 +2,17 @@
 
 .Input > label {
   display: block;
-  font-size: 16px;
+  font-size: 14px;
+  font-weight: normal;
+  letter-spacing: 2px;
 }
 
 .Input > input {
   margin: 0 auto;
   padding: 5px 10px;
-  width: 250px;
+  width: 100%;
   margin: 2px 0 15px 0;
+  border: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .validation-error {
