--- a/frontend/src/js/components/elements/Panel/Panel.css
+++ b/frontend/src/js/components/elements/Panel/Panel.css
@@ -1,7 +1,13 @@
 .Panel {
     width: auto;
     display: block;
-    padding: 20px 30px;
+    padding: 20px 50px;
+    flex-grow: 3;
+}
+
+.Panel h1 {
+    font-size: 18px;
+    letter-spacing: 2px;
 }
 
 .Panel-Half {
@@ -18,6 +24,6 @@
 
 .Panel-HelpIcon {
     font-size: 14px;
-    margin-top: 5px;
+    margin: 0 0 0 5px;
     position: absolute;
 }
