TabContainer component, closes #21

--- a/frontend/src/js/components/variables.css
+++ b/frontend/src/js/components/variables.css
@@ -22,7 +22,9 @@
   --color-primary-shade-lighter-4: #56789f;
 
   --color-sidemenu: #d3d6d9;
+  --color-text-selected: #464749;
   --color-text: #6a6c6f;
+  --color-text-hover: #8D8E91;
   --color-footer: #101010;
   --color-success: #41b222;
 
