Add align to logo

--- a/frontend/src/js/components/elements/Logo/Logo.css
+++ b/frontend/src/js/components/elements/Logo/Logo.css
@@ -17,3 +17,11 @@
   letter-spacing: 1px;
   font-weight: bold;
 }
+
+.Logo-Align-Left {
+    float: left;
+}
+
+.Logo-Align-Right {
+    float: right;
+}
