--- a/frontend/src/js/components/elements/HeaderSmall/HeaderSmall.css
+++ b/frontend/src/js/components/elements/HeaderSmall/HeaderSmall.css
@@ -10,8 +10,16 @@
   padding: 20px 40px;
 }
 
-.HeaderSmall .Navigation {
+.HeaderSmall-Navigation {
   float: right;
+}
+
+.HeaderSmall-Navigation a {
+    color: #fff;
+    margin-left: 20px;
+    font-size: 16px;
+    font-weight: bold;
+    letter-spacing: 1px;
 }
 
 .HeaderSmall .Logo {
