--- a/frontend/src/js/components/elements/Divider/Divider.css
+++ b/frontend/src/js/components/elements/Divider/Divider.css
@@ -1,20 +1,31 @@
 @import '../../variables.css';
 
 .Divider {
-  text-align: center;
+    text-align: center;
 }
 
 .Divider span {
-  padding: 0 10px;
-  background: #FFF;
-  text-transform: uppercase;
-  font-weight: bold;
+    padding: 0 10px;
+    background: #FFF;
+    text-transform: uppercase;
+    font-weight: bold;
 }
 
 .Divider {
-  width: 100%;
-  text-align: center;
-  border-bottom: 1px solid var(--color-white-shade-darker-2);
-  line-height: 0.1em;
-  margin: 20px 0;
+    text-align: center;
+}
+
+.Divider-Horizontal {
+    border-bottom: 1px solid var(--color-white-shade-darker-2);
+    width: 100%;
+    line-height: 0.1em;
+    margin: 20px 0;
+}
+
+.Divider-Vertical {
+    border-right: 1px solid var(--color-white-shade-darker-2);
+    width: 1px;
+    height: 100%;
+    display: inline-block;
+    float: left;
 }
