Stick to bottom

--- a/frontend/src/js/components/elements/SideMenu/SideMenu.css
+++ b/frontend/src/js/components/elements/SideMenu/SideMenu.css
@@ -67,6 +67,11 @@
     border-left: 5px solid var(--color-primary-shade-lighter-4);
 }
 
+.SideMenuItem-StickBottom {
+    position: absolute;
+    bottom: 0;
+}
+
 .SideMenuContainer-Second-Level {
     padding: 0;
 }
