Update components to new react version

--- a/frontend/src/js/components/pages/Home/Home.css
+++ b/frontend/src/js/components/pages/Home/Home.css
@@ -1165,6 +1165,7 @@ header form {
 header form input[type="text"],
 header form input[type="email"],
 header form input[type="password"] {
+    color:black;
     border: none;
     background-color: #fff;
     border-radius: 4px;
