--- a/frontend/src/components/elements/Footer/Footer.css
+++ b/frontend/src/components/elements/Footer/Footer.css
@@ -5,7 +5,7 @@
   color: var(--color-white);
 }
 
-.Footer-copyright {
+.copyright {
   text-align: center;
   height: 60px;
   line-height: 60px;
@@ -16,45 +16,45 @@
   background-color: var(--color-primary-shade-darker-1);
 }
 
-.Footer-container {
+.container {
   padding: 3em 4em;
   color: var(--color-white);
   background-color: var(--color-primary);
 }
 
-.Footer-container a {
+.container a {
   color: var(--color-white-shade-darker-1);
 }
 
-.Footer-container ul {
+.container ul {
   padding: 0;
 }
 
-.Footer-container li {
+.container li {
   list-style: none;
   text-align: left;
 }
 
-.Footer-container li a {
+.container li a {
   color: var(--color-white-shade-darker-1);
   font-size: 16px;
   padding: 2px 0;
   display: block;
 }
 
-.Footer-container h2 {
+.container h2 {
   font-size: 14px;
   text-transform: uppercase;
   font-weight: bold;
   letter-spacing: 1px;
 }
 
-.Footer-Company {
+.Company {
   padding-left: 60px;
   padding-top: 15px;
 }
 
-.Footer-Logo {
+.Logo {
   font-size: 24px;
   margin: 0 ;
   font-weight: bold;
@@ -62,23 +62,23 @@
   color: var(--color-white) !important;
 }
 
-.Footer-SocialLinks {
+.SocialLinks {
   margin-top: 15px;
 }
 
-.Footer-SocialLinks a {
+.SocialLinks a {
   margin-right: 20px;
   width: 38px;
   height: 38px;
   font-size: 18px;
 }
 
-.Footer-SocialLinks i:hover {
+.SocialLinks i:hover {
   background-color: var(--color-white);
   color: var(--color-black);
 }
 
-.Footer-SocialLinks i {
+.SocialLinks i {
   text-align: center;
   width: 38px; height: 38px;
   color: var(--color-white);
@@ -87,6 +87,6 @@
   line-height: 38px;
 }
 
-.Footer-SocialLinks a:last {
+.SocialLinks a:last {
   margin-right: 0;
 }
